[package]
name = "rocket-dependency-injection"
authors = ["Asaf Rosentswaig <asafr1993@gmail.com>"]
repository = "https://github.com/Asafrose/rocket-dependency-injection"
version = "0.1.0"
edition = "2021"
description = "Small experimental crate for adding dependency injection functionalities to rocket"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rocket-dependency-injection-derive"]

[features]
default = ['derive']
derive = ['rocket-dependency-injection-derive']

[dependencies]
async-trait = "^0.1.57"
rocket-dependency-injection-derive = { version = "0.1.0", path = "./rocket-dependency-injection-derive", optional = true }
rocket = "^0.5.0-rc.2"
tokio = "^1.21.2"
