[package]
name = "rocket-dependency-injection-derive"
authors = ["asafr1993@gmail.com"]
repository = "https://github.com/Asafrose/rocket-dependency-injection"
version = "0.1.0"
edition = "2021"
description = "Derive macros for rocket-dependency-injection crate"
license = "FOSS!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = {version = "1.0.102", features = ["full"]}
